--- a/src/static/styles.css
+++ b/src/static/styles.css
@@ -1,3 +1,24 @@
+.participants-list {
+  margin: 0.5em 0 0 0;
+  padding-left: 0;
+}
+
+.participants-list.no-bullets {
+  list-style: none;
+  padding-left: 0;
+}
+
+.delete-icon {
+  cursor: pointer;
+  color: #c00;
+  margin-left: 0.5em;
+  font-size: 1.1em;
+  vertical-align: middle;
+  transition: color 0.2s;
+}
+.delete-icon:hover {
+  color: #f00;
+}
 * {
   box-sizing: border-box;
   margin: 0;
